@@ -3,6 +3,10 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2008-10-17
+	- main.css: normal font (instead of x-small)
+	
+	
 2008-10-16
 	- Preliminaries for resolving terms
 	
